# OpenCV_Gesture

./: .gitignore  CMakeLists.txt  Five.fea  Four.fea  Makefile  One.fea  ReadMe.md  Three.fea  Two.fea  ann_xml.xml  main.cpp  trainedKNN.yaml  writeFeatures.cpp
